# embedded-example-stmf1

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  README.md  empm.toml
app/: CMakeLists.txt
app/inc/: board_config.h
app/src/: app.c  ledsmg.c  rtc.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
cmake/: gcc-arm-none-eabi.cmake
device/board/alientek/: .mxproject  CMakeLists.txt  STM32F103RBTx_FLASH.ld  nano_f103.ioc
device/board/alientek/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
device/board/alientek/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
device/board/alientek/cmake/stm32cubemx/: CMakeLists.txt
device/board/alientek/inc/: board.h
device/board/alientek/src/: board.c  key.c  rtc.c  uart.c
drivers/led_smg/: CMakeLists.txt  led_smg.c
drivers/norflash/: CMakeLists.txt
